# R4T

./: README.md  pyproject.toml
r4t/: __main__.py  discovery.py  names.py
r4t/chat/: client.py  server.py
