[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"


[project]
name = "r4t"
version = "0.1.0"
description = "Temporary anonymous LAN terminal chat"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "prompt_toolkit"
]


[project.scripts]
r4t = "r4t.__main__:main"